<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/bt_1"
        android:text="1"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/bt_2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/input_code_button_v_sep"
        app:layout_constraintBottom_toTopOf="@+id/bt_4"
        style="@style/InputCodeButtons"
        />

    <Button
        android:id="@+id/bt_2"
        android:text="2"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/bt_1"
        app:layout_constraintEnd_toStartOf="@+id/bt_3"
        android:layout_marginBottom="@dimen/input_code_button_v_sep"
        app:layout_constraintBottom_toTopOf="@+id/bt_5"
        style="@style/InputCodeButtons"
        />

    <Button
        android:id="@+id/bt_3"
        android:text="3"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/bt_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/input_code_button_v_sep"
        app:layout_constraintBottom_toTopOf="@+id/bt_6"
        style="@style/InputCodeButtons"
        />

    <Button
        android:id="@+id/bt_4"
        android:text="4"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/bt_5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/input_code_button_v_sep"
        app:layout_constraintBottom_toTopOf="@+id/bt_7"
        style="@style/InputCodeButtons"
        />

    <Button
        android:id="@+id/bt_5"
        android:text="5"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/bt_4"
        app:layout_constraintEnd_toStartOf="@+id/bt_6"
        android:layout_marginBottom="@dimen/input_code_button_v_sep"
        app:layout_constraintBottom_toTopOf="@+id/bt_8"
        style="@style/InputCodeButtons"
        />

    <Button
        android:id="@+id/bt_6"
        android:text="6"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/bt_5"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/input_code_button_v_sep"
        app:layout_constraintBottom_toTopOf="@+id/bt_9"
        style="@style/InputCodeButtons"
        />

    <Button
        android:id="@+id/bt_7"
        android:text="7"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/bt_8"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/input_code_button_v_sep"
        app:layout_constraintBottom_toTopOf="@+id/bt_null"
        style="@style/InputCodeButtons"
        />

    <Button
        android:id="@+id/bt_8"
        android:text="8"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/bt_7"
        app:layout_constraintEnd_toStartOf="@+id/bt_9"
        android:layout_marginBottom="@dimen/input_code_button_v_sep"
        app:layout_constraintBottom_toTopOf="@+id/bt_0"
        style="@style/InputCodeButtons"
        />

    <Button
        android:id="@+id/bt_9"
        android:text="9"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/bt_8"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/input_code_button_v_sep"
        app:layout_constraintBottom_toTopOf="@+id/bt_back"
        style="@style/InputCodeButtons"
        />

    <Button
        android:id="@+id/bt_null"
        android:text=""
        android:visibility="invisible"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/input_code_button_v_pos"
        app:layout_constraintEnd_toStartOf="@+id/bt_0"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/InputCodeButtons"
        />

    <Button
        android:id="@+id/bt_0"
        android:text="0"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/input_code_button_v_pos"
        app:layout_constraintStart_toEndOf="@+id/bt_null"
        app:layout_constraintEnd_toStartOf="@+id/bt_back"
        style="@style/InputCodeButtons"
        />

    <Button
        android:id="@+id/bt_back"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/input_code_button_v_pos"
        app:layout_constraintStart_toEndOf="@+id/bt_0"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/InputCodeButtons"
        android:paddingLeft="8dp"
        android:drawableLeft="@drawable/ic_backspace_white_24dp"
        />

</android.support.constraint.ConstraintLayout>