...
    tools:context="eu.sesma.generik.ui.pin.PinActivity"
    >

    <include layout="@layout/keypad" />

    <TextView
        android:id="@+id/tv_code"
        tools:text="1 2 3 4"
        android:maxLength="11"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="8dp"
...
